# customer-support-agent

./: .gitignore  Dockerfile  README.md  TOOLBOX.md  dump.rdb  main.py  pyproject.toml  requirements.txt  tools.yaml
app/: __init__.py  agent.py  main.py  mcp_client.py  memory.py
docs/: conf.py  index.rst
docs/modules/: app.rst  mcp_server.rst
mcp_server/: __init__.py  app.py
scripts/: seed_data.py
tests/: test_agent.py
