[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "openai-agents==0.1.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "toolbox-core<=0.5.3",
    "uvicorn[standard]>=0.30.0",
]
